# code_like_a_pro_in_rust

./: Cargo.toml
build-script-example/: Cargo.toml  build.rs
build-script-example/src/: hello_world.c  main.rs
num_cpus/src/: file.html  lib.rs
src/: main.rs
subworkspace1/: Cargo.toml
subworkspace2/: Cargo.toml
subworkspace3/: Cargo.toml
subworkspace3/src/: lib.rs
